--- a/Web_Project/test.html
+++ b/Web_Project/test.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="test.css">
 </head>
 
-<body>
+
     <header>
         <div class="container">
             <h1>Kaonueng Portfolio</h1>
@@ -22,25 +22,27 @@
             </nav>
         </div>
     </header>
+
+
     <section>
         <div class="Topic">
             <p class="Introduce"> <span style="color:red;
             ">ข้าวนึ่งมาเยือน</span> CE-NextGen#2</p>
         </div>
     </section>
-    <div class="About">
-        <h2 id="about" class="Topic">About Kaonueng</h2>
-        <div class="explain">
-            <p>I'm 16 years old live in lopburi, Studying at PibulWitthayalaiHighSchool</p>
-            <p> My name is <span style="color:rgb(54, 158, 193)"> "Kaonueng" </span> because my parents like to eat
-                sticky rice.</p>
-            <p>In northern dialect, Khao Neung means sticky rice.</p>
+    <section>
+        <div class="About">
+            <h2 id="about" class="Topic">About Kaonueng</h2>
+            <div class="explain">
+                <p>I'm 16 years old live in lopburi, Studying at PibulWitthayalaiHighSchool</p>
+                <p> My name is <span style="color:rgb(54, 158, 193)"> "Kaonueng" </span> because my parents like to eat
+                    sticky rice.</p>
+                <p>In northern dialect, Khao Neung means sticky rice.</p>
+            </div>
         </div>
-    </div>
-    <div class="img">
-        <!--<img  src="BAG.jpg" width="250px" height="200px">-->
-    </div>
     </section>
+
+    
     <section>
         <div class="move-education">
             <div class="Topic">
@@ -63,6 +65,8 @@
         <br>
         </div>
     </section>
+
+
     <section>
         <div class="move-contact">
             <div class="Topic">
@@ -82,6 +86,8 @@
         </div>
         </div>
     </section>
+
+
     <section>
         <div class="move-skill">
             <div class="Skill">
@@ -98,11 +104,15 @@
                     </div>
                 </div>
             </div>
-        </div>
+    </div>
+            
+
     </section>
     <footer>
         <p>&copy; All about Kaonueng</p>
     </footer>
+
+
 </body>
 
 </html>
